2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/filetypes.c, src/filetypes.h, doc/geany.txt,
   doc/geany.html, data/filetypes.*:
   Add support for filetype-specific indentation settings (closes
   #3339420 and #3390435).


2011-08-24  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/editor.c:
   Make completion and word completion support non-ASCII characters
   (closes #3313351).


2011-08-21  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/callbacks.c, src/editor.c, src/editor.h, src/keybindings.c:
   Fix search for the current word if it isn't composed of only
   GEANY_WORDCHARS (closes #3386129).


2011-08-20  Colomban Wendling  <colomban(at)geany(dot)org>

 * tagmanager/haskell.c:
   Fix tags for one-letter Haskell symbols (closes #3289160).


2011-08-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/plugins.dox:
   Update of wording to fix some grammatical issues etc. on plugin howto.
   Patch provided by Matthew Brush. Thanks.
 * data/filetype_extensions.conf:
   Extend list of primary keywords. Patch by Alexander Eberspächer. Thanks.


2011-08-19  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetype_extensions.conf, data/filetypes.Cython.conf,
   data/filetypes.python:
   Add Cython filetype (patch by Matthew Brush, thanks).
 * src/symbols.c, tagmanager/include/tm_workspace.h,
   tagmanager/tm_workspace.c:
   Create temporary files used for generating global tags files in the
   system directory for temp files.
 * tagmanager/diff.c:
   Don't make tags for /dev/null in diff files but for the new file
   instead (Based on a patch by Yang Hong, thanks).


2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/plugins.dox:
   Update API version used inside plugin howto to a more recent version
   (API v211).


2011-08-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/msgwindow.c, src/msgwindow.h, src/ui_utils.c, src/ui_utils.h: