@@ -4,6 +4,8 @@
    doc/geany.html, data/filetypes.*:
    Add support for filetype-specific indentation settings (closes
    #3339420 and #3390435).
+ * src/callbacks.c, src/editor.c, src/editor.h:
+   Add editor_set_indent_width() to only set indentation width.
 
 
 2011-08-24  Colomban Wendling  <colomban(at)geany(dot)org>
